src/styles/components/_container.scss
.container {
	padding: $xl-size 20% 0 20%;
}

@media screen and (max-width: $desktop-breakpoint) {
	.container {
		padding: $xs-size $xs-size $xl-size $xs-size;
		text-align: center;
		margin: 0 auto $xxl-size;
	}
}

@media screen and (min-width: $small-phone-breakpoint) {
	.container {
		padding: $xl-size 15% 0 15%;
	}
}

